--- a/web/tmpl/GenomeInfo.tmpl
+++ b/web/tmpl/GenomeInfo.tmpl
@@ -618,6 +618,7 @@ function get_list_preview (opts) {
 			user_filter = new filterlist(document.new_users.select_user);
 			set_input("input_user");
 		});
+		$('#genome_users_edit_box').dialog({width:300});
 	</script>
 	<table class="small">
 		<tr>
