--- a/web/tmpl/LoadExperiment.tmpl
+++ b/web/tmpl/LoadExperiment.tmpl
@@ -290,15 +290,15 @@ function get_sources () {
 <table class="small ui-widget-content ui-corner-all">
   <tr>
     <td>Name:</td>
-    <td><input id="edit_name" type="textbox" size="58" value="<TMPL_VAR NAME=NAME>" /></td>
+    <td><input id="edit_name" type="textbox" size="58" value="<TMPL_VAR NAME='NAME'>" /></td>
   </tr>
   <tr>
     <td>Description:</td>
-    <td><textarea id="edit_description" rows=5 cols=50 ><TMPL_VAR NAME=DESC></textarea></td>
+    <td><textarea id="edit_description" rows=5 cols=50 ><TMPL_VAR NAME='DESC'></textarea></td>
   </tr>
   <tr>
     <td>Version:</td>
-    <td><input id="edit_version" type="textbox" size="10" value="<TMPL_VAR NAME=NAME>" /></td>
+    <td><input id="edit_version" type="textbox" size="10" value="<TMPL_VAR NAME='NAME'>" /></td>
   </tr>
   <tr>
     <td>Source:</td>
@@ -314,8 +314,8 @@ function get_sources () {
   <tr>
     <td>Genome:</td>
     <td>
-      <input id="edit_genome" onkeypress="wait_to_search(search_genomes, this.value);" size="58" />
-      <input id="gid" type="hidden" />
+      <input id="edit_genome" onkeypress="wait_to_search(search_genomes, this.value);" size="58" value="<TMPL_VAR NAME='GENOME_NAME'>" />
+      <input id="gid" type="hidden" value="<TMPL_VAR NAME='GENOME_ID'>" />
     </td>
   </tr>
   <tr>
