Hide owner groups/lists from average user.

--- a/web/tmpl/GenomeInfo.tmpl
+++ b/web/tmpl/GenomeInfo.tmpl
@@ -690,7 +690,7 @@ function get_list_preview (opts) {
 		<TMPL_LOOP NAME="GROUP_LOOP">
 		<tr valign="top">
 			<td style="white-space:nowrap;"><TMPL_VAR NAME="GROUP_NAME"></td>
-			<td style="white-space:nowrap;">(<TMPL_VAR NAME="GROUP_ROLE">)</td>
+			<td style="white-space:nowrap;"><TMPL_VAR NAME="GROUP_ROLE"></td>
 			<td><TMPL_VAR NAME="GROUP_DESC"></td>
 			<td style="float:right;">
 				<TMPL_IF NAME="GROUP_ID">
