--- a/web/tmpl/box.tmpl
+++ b/web/tmpl/box.tmpl
@@ -1,10 +1,21 @@
-<TMPL_IF NAME=ADJUST_BOX>
-<div id=page_box class="ui-widget-content ui-corner-all">
+<TMPL_IF NAME="ADJUST_BOX">
+	<div class="ui-widget-content ui-corner-all">
 <TMPL_ELSE>
-<div id=page_box class="ui-widget-content ui-corner-all">
+	<div class="ui-widget-content ui-corner-all">
 </TMPL_IF>
-<TMPL_IF NAME=BOX_NAME><h3 class="ui-helper-reset ui-corner-top" aria-expanded="true" ><TMPL_VAR NAME=BOX_NAME></h3><hr></TMPL_IF>
 
-<TMPL_IF NAME="BODY"><TMPL_VAR NAME=BODY></TMPL_IF>
+<TMPL_IF NAME="BOX_NAME">
+	<h3 class="ui-helper-reset ui-corner-top" aria-expanded="true">
+		<TMPL_VAR NAME="BOX_NAME">
+	</h3>
+	<hr>
+</TMPL_IF>
+
+<TMPL_IF NAME="BODY">
+	<div style="padding:10px;">
+		<TMPL_VAR NAME="BODY">
+	</div>
+</TMPL_IF>
+
 </div>
 
