--- a/web/tmpl/widgets/FileSelect.tmpl
+++ b/web/tmpl/widgets/FileSelect.tmpl
@@ -420,6 +420,7 @@ function load_from_ncbi() {
   </TMPL_IF>
 
   <div id="tab-4" class="small">
+  	Select a file to upload.<br><br>
     File: <input id="input_upload_file" name="input_upload_file" type="file" size="30" data-url='<TMPL_VAR NAME="PAGE_NAME">' />
   </div> <!-- tab-4 -->
 
